--- a/.classpath
+++ b/.classpath
@@ -1,40 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry exported="true" kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
-	<classpathentry exported="true" kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry exported="true" kind="lib" path="WebContent/WEB-INF/lib/asm-debug-all-5.0.4.jar"/>
-	<classpathentry exported="true" kind="lib" path="WebContent/WEB-INF/lib/hk2-api-2.4.0-b31.jar"/>
-	<classpathentry exported="true" kind="lib" path="WebContent/WEB-INF/lib/hk2-locator-2.4.0-b31.jar"/>
-	<classpathentry exported="true" kind="lib" path="WebContent/WEB-INF/lib/hk2-utils-2.4.0-b31.jar"/>
-	<classpathentry exported="true" kind="lib" path="WebContent/WEB-INF/lib/jackson-jaxrs-base-2.5.4.jar"/>
-	<classpathentry exported="true" kind="lib" path="WebContent/WEB-INF/lib/jackson-jaxrs-json-provider-2.5.4.jar"/>
-	<classpathentry exported="true" kind="lib" path="WebContent/WEB-INF/lib/jackson-module-jaxb-annotations-2.5.4.jar"/>
-	<classpathentry exported="true" kind="lib" path="WebContent/WEB-INF/lib/javassist-3.18.1-GA.jar"/>
-	<classpathentry exported="true" kind="lib" path="WebContent/WEB-INF/lib/javax.annotation-api-1.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="WebContent/WEB-INF/lib/javax.inject-2.4.0-b31.jar"/>
-	<classpathentry exported="true" kind="lib" path="WebContent/WEB-INF/lib/javax.ws.rs-api-2.0.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="WebContent/WEB-INF/lib/jaxb-api-2.2.7.jar"/>
-	<classpathentry exported="true" kind="lib" path="WebContent/WEB-INF/lib/jersey-client.jar"/>
-	<classpathentry exported="true" kind="lib" path="WebContent/WEB-INF/lib/jersey-common-2.22.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="WebContent/WEB-INF/lib/jersey-common.jar"/>
-	<classpathentry exported="true" kind="lib" path="WebContent/WEB-INF/lib/jersey-container-servlet-core.jar"/>
-	<classpathentry exported="true" kind="lib" path="WebContent/WEB-INF/lib/jersey-container-servlet.jar"/>
-	<classpathentry exported="true" kind="lib" path="WebContent/WEB-INF/lib/jersey-entity-filtering-2.22.jar"/>
-	<classpathentry exported="true" kind="lib" path="WebContent/WEB-INF/lib/jersey-guava-2.22.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="WebContent/WEB-INF/lib/jersey-media-jaxb.jar"/>
-	<classpathentry exported="true" kind="lib" path="WebContent/WEB-INF/lib/jersey-media-json-jackson-2.22.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="WebContent/WEB-INF/lib/jersey-server.jar"/>
-	<classpathentry exported="true" kind="lib" path="WebContent/WEB-INF/lib/org.osgi.core-4.2.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="WebContent/WEB-INF/lib/osgi-resource-locator-1.0.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="WebContent/WEB-INF/lib/persistence-api-1.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="WebContent/WEB-INF/lib/validation-api-1.1.0.Final.jar"/>
-	<classpathentry exported="true" kind="lib" path="WebContent/WEB-INF/lib/aopalliance-repackaged-2.4.0-b31.jar"/>
-	<classpathentry exported="true" kind="lib" path="WebContent/WEB-INF/lib/lombok-1.18.4.jar"/>
-	<classpathentry exported="true" kind="lib" path="WebContent/WEB-INF/lib/jackson-annotations-2.5.4.jar"/>
-	<classpathentry exported="true" kind="lib" path="WebContent/WEB-INF/lib/jackson-core-2.5.4.jar"/>
-	<classpathentry exported="true" kind="lib" path="WebContent/WEB-INF/lib/jackson-databind-2.5.4.jar"/>
-	<classpathentry exported="true" kind="lib" path="WebContent/WEB-INF/lib/jackson-datatype-jsr310-2.5.2.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
+	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/asm-debug-all-5.0.4.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/hk2-api-2.4.0-b31.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/hk2-locator-2.4.0-b31.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/hk2-utils-2.4.0-b31.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/javassist-3.18.1-GA.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/javax.annotation-api-1.2.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/javax.inject-2.4.0-b31.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/javax.ws.rs-api-2.0.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jaxb-api-2.2.7.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jersey-client.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jersey-common-2.22.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jersey-common.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jersey-container-servlet-core.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jersey-container-servlet.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jersey-entity-filtering-2.22.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jersey-guava-2.22.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jersey-media-jaxb.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jersey-media-json-jackson-2.22.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jersey-server.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/org.osgi.core-4.2.0.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/osgi-resource-locator-1.0.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/persistence-api-1.0.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/validation-api-1.1.0.Final.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/aopalliance-repackaged-2.4.0-b31.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/lombok-1.18.4.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v8.0">
 		<attributes>
 			<attribute name="owner.project.facets" value="jst.web"/>
@@ -45,5 +38,12 @@
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jackson-annotations-2.11.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jackson-core-2.11.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jackson-databind-2.11.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jackson-datatype-jsr310-2.11.2.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jackson-jaxrs-base-2.11.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jackson-jaxrs-json-provider-2.11.2.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jackson-module-jaxb-annotations-2.11.1.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
